[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bizverify-agents"
version = "0.1.0"
description = "BizVerify tool wrappers for LLM agent frameworks — LangChain, CrewAI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "BizVerify", email = "hello@bizverify.co" }]
keywords = ["bizverify", "langchain", "crewai", "ai-agents", "llm-tools", "business-verification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
dependencies = ["bizverify>=0.1.0"]

[project.urls]
Homepage = "https://bizverify.co"
Documentation = "https://docs.bizverify.co/guides/ai-agents"
Repository = "https://github.com/BizVerify/bizverify-agents"

[project.optional-dependencies]
langchain = ["langchain-core>=0.2.0"]
crewai = ["crewai>=0.50.0"]
dev = ["pytest>=7", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/bizverify_agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
